{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 118,
  "lineage": "4a924ab5-68a5-b088-3d7a-83434466131c",
  "resources": [
    {
      "module": "module.base.module.redis",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:731106932034:security-group/sg-09beb80cf8c716de5",
            "description": "Security group for Redis ElastiCache",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09beb80cf8c716de5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "redis-security-group20240611202641725400000001",
            "name_prefix": "redis-security-group",
            "owner_id": "731106932034",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0815f0dabd68edf17"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.helm",
      "mode": "data",
      "type": "kubernetes_service",
      "name": "nginx",
      "provider": "module.helm.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/nginx",
            "metadata": [
              {
                "annotations": {
                  "meta.helm.sh/release-name": "nginx",
                  "meta.helm.sh/release-namespace": "default"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/instance": "nginx",
                  "app.kubernetes.io/managed-by": "Helm",
                  "app.kubernetes.io/name": "nginx",
                  "app.kubernetes.io/version": "1.27.0",
                  "helm.sh/chart": "nginx-18.1.0"
                },
                "name": "nginx",
                "namespace": "default",
                "resource_version": "50606",
                "uid": "85fa2972-2174-4f91-b32e-dee82740186a"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.100.122.26",
                "cluster_ips": [
                  "10.100.122.26"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 30950,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "http"
                  },
                  {
                    "name": "https",
                    "node_port": 32262,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "https"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/instance": "nginx",
                  "app.kubernetes.io/name": "nginx"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a85fa297221744f91b32edee82740186-1621127283.us-west-2.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        }
      ]
    },
    {
      "module": "module.helm",
      "mode": "data",
      "type": "kubernetes_service",
      "name": "reducto",
      "provider": "module.helm.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/reducto-reducto-chart",
            "metadata": [
              {
                "annotations": {
                  "meta.helm.sh/release-name": "reducto",
                  "meta.helm.sh/release-namespace": "default"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/instance": "reducto",
                  "app.kubernetes.io/managed-by": "Helm",
                  "app.kubernetes.io/name": "reducto-chart",
                  "app.kubernetes.io/version": "1.16.0",
                  "helm.sh/chart": "reducto-chart-0.1.0"
                },
                "name": "reducto-reducto-chart",
                "namespace": "default",
                "resource_version": "49721",
                "uid": "d12ba893-e0e2-4838-9d3f-2001a2711d4a"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.100.26.170",
                "cluster_ips": [
                  "10.100.26.170"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 30365,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "http"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/instance": "reducto",
                  "app.kubernetes.io/name": "reducto-chart"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "ad12ba893e0e248389d3f2001a2711d4-314902363.us-west-2.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:731106932034:security-group/sg-03f6e1140d2338647",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-03f6e1140d2338647",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f1aef48ea43bcf4e"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "reducto-cluster-41fd421f-cluster-20240611204924226000000003",
            "name_prefix": "reducto-cluster-41fd421f-cluster-",
            "owner_id": "731106932034",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "reducto-cluster-41fd421f-cluster"
            },
            "tags_all": {
              "Name": "reducto-cluster-41fd421f-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0815f0dabd68edf17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.random_id.server"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:731106932034:security-group/sg-0f1aef48ea43bcf4e",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1aef48ea43bcf4e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-075a9ac9986b2a132"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0779654d0658dcde8"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0c818bd20cd4fbeea"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f6e1140d2338647"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f6e1140d2338647"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f6e1140d2338647"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f6e1140d2338647"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f6e1140d2338647"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f6e1140d2338647"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "reducto-cluster-41fd421f-node-20240611204924226300000002",
            "name_prefix": "reducto-cluster-41fd421f-node-",
            "owner_id": "731106932034",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "reducto-cluster-41fd421f-node",
              "kubernetes.io/cluster/reducto-cluster-41fd421f": "owned"
            },
            "tags_all": {
              "Name": "reducto-cluster-41fd421f-node",
              "kubernetes.io/cluster/reducto-cluster-41fd421f": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0815f0dabd68edf17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.random_id.server"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-900600826",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03f6e1140d2338647",
            "security_group_rule_id": "sgr-0254a27d19ce8b21d",
            "self": false,
            "source_security_group_id": "sg-0f1aef48ea43bcf4e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.module.eks.aws_security_group.cluster",
            "module.kubernetes.module.eks.aws_security_group.node",
            "module.kubernetes.random_id.server"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1245676763",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f1aef48ea43bcf4e",
            "security_group_rule_id": "sgr-0907a965da2c7ca10",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.module.eks.aws_security_group.cluster",
            "module.kubernetes.module.eks.aws_security_group.node",
            "module.kubernetes.random_id.server"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1045950187",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f1aef48ea43bcf4e",
            "security_group_rule_id": "sgr-08590ce8b5b8324f5",
            "self": false,
            "source_security_group_id": "sg-03f6e1140d2338647",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.module.eks.aws_security_group.cluster",
            "module.kubernetes.module.eks.aws_security_group.node",
            "module.kubernetes.random_id.server"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-334648231",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f1aef48ea43bcf4e",
            "security_group_rule_id": "sgr-0d1e7c05ff21deead",
            "self": false,
            "source_security_group_id": "sg-03f6e1140d2338647",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.module.eks.aws_security_group.cluster",
            "module.kubernetes.module.eks.aws_security_group.node",
            "module.kubernetes.random_id.server"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3668980785",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f1aef48ea43bcf4e",
            "security_group_rule_id": "sgr-0171e47678a41b577",
            "self": false,
            "source_security_group_id": "sg-03f6e1140d2338647",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.module.eks.aws_security_group.cluster",
            "module.kubernetes.module.eks.aws_security_group.node",
            "module.kubernetes.random_id.server"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3387688976",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f1aef48ea43bcf4e",
            "security_group_rule_id": "sgr-0d43f3a7eb7f07798",
            "self": false,
            "source_security_group_id": "sg-03f6e1140d2338647",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.module.eks.aws_security_group.cluster",
            "module.kubernetes.module.eks.aws_security_group.node",
            "module.kubernetes.random_id.server"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2907519963",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f1aef48ea43bcf4e",
            "security_group_rule_id": "sgr-067e2af23ba12f0c9",
            "self": false,
            "source_security_group_id": "sg-03f6e1140d2338647",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.module.eks.aws_security_group.cluster",
            "module.kubernetes.module.eks.aws_security_group.node",
            "module.kubernetes.random_id.server"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1099458228",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f1aef48ea43bcf4e",
            "security_group_rule_id": "sgr-0c1385cf728ac61dc",
            "self": false,
            "source_security_group_id": "sg-03f6e1140d2338647",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.module.eks.aws_security_group.cluster",
            "module.kubernetes.module.eks.aws_security_group.node",
            "module.kubernetes.random_id.server"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1022932435",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f1aef48ea43bcf4e",
            "security_group_rule_id": "sgr-05da5819f830269d1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.module.eks.aws_security_group.cluster",
            "module.kubernetes.module.eks.aws_security_group.node",
            "module.kubernetes.random_id.server"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3488047309",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f1aef48ea43bcf4e",
            "security_group_rule_id": "sgr-0e0bd4c7b94ff2776",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.module.eks.aws_security_group.cluster",
            "module.kubernetes.module.eks.aws_security_group.node",
            "module.kubernetes.random_id.server"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1807270690",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0f1aef48ea43bcf4e",
            "security_group_rule_id": "sgr-076697bdb594fb656",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.module.eks.aws_security_group.cluster",
            "module.kubernetes.module.eks.aws_security_group.node",
            "module.kubernetes.random_id.server"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}